--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             bottom: 310px;
             font-size: 50px;
             font-family: 'Cookie', cursive;
-            color: #1e7e34
+            color: blue;
         }
 
         .vl {
@@ -80,7 +80,7 @@
             right: 0px;
             left: 125px;
             bottom: 160px;
-            border-top: 3px solid green;
+            border-top: 3px solid blue;
             height: 10px;
             width: 1150px;
         }
@@ -150,7 +150,7 @@
             right: 0px;
             left: 130px;
             bottom: 140px;
-            border-top: 3px solid green;
+            border-top: 3px solid blue;
             height: 10px;
             width: 1150px;
         }
@@ -520,7 +520,7 @@
                                 </p>
                             </div>
                             <div class="row">
-                                <p style="font-family: 'Cookie', cursive; color: #1e7e34; position:relative; left: 550px; font-size: 33px; top: 5px">
+                                <p style="font-family: 'Cookie', cursive; color: blue; position:relative; left: 550px; font-size: 33px; top: 5px">
                                     Uncommon Car-Rents
                                 </p>
                                 <img src="../src/assets/pictures/car_rent_logo_croped.png"
