--- a/src/index.html
+++ b/src/index.html
@@ -343,7 +343,7 @@
             </li>
         </ul>
     </div>
-    <button onclick="location.href='user/signup.html';" class="btn btn-dark mr-2 my-2 my-sm-0" type="button">Sign Up</button>
+    <button onclick="location.href='user/dashboard/signup.html';" class="btn btn-dark mr-2 my-2 my-sm-0" type="button">Sign Up</button>
     <button onclick="location.href='user/login.html';" class="btn btn-light mr-2 my-2 my-sm-0" type="button">Login</button>
 </nav>
 <div class="container-fluid">
