--- a/src/user/login.html
+++ b/src/user/login.html
@@ -72,7 +72,7 @@
                     <button class="btn btn-primary" id="btnLogin" type="button">Sign in</button>
 
                     <div class="sign-up">
-                        Don't have an account? <a href="signup.html">Create One</a>
+                        Don't have an account? <a href="dashboard/signup.html">Create One</a>
                     </div>
                 </form>
             </div>
@@ -88,19 +88,33 @@
         let email = $('#userEmail').val();
         let pass = $('#userPassword').val();
         $.ajax({
-            type: "GET",
-            url: "carsys.azurewebsites.net/api/v1/user/?email=" + email + "&password=" + pass,
-            contentType: "application/json",
+            type: 'GET',
+            url: "https://carsys.azurewebsites.net/api/v1/user/?email=" + email + "&password=" + pass,
+            dataType: 'json',
             success: function (resp) {
-                if (resp.state === true) {
-                    let val = resp.data;
-                    alert(resp.message);
-                    $.cookie('user-id', val.id, {expires: 1, path: '/'});
-                    $.cookie('user-email', val.email, {expires: 1, path: '/'});
-                    location.href = 'dashboard/dashboard.html';
-                } else {
-                    alert("Login Fail.!");
+                if(email === "admin"){
+                    if (resp.state === true) {
+                        let val = resp.data;
+                        alert(resp.message);
+                        $.cookie('user-id', val.id, {expires: 1, path: '/'});
+                        $.cookie('user-email', val.email, {expires: 1, path: '/'});
+                        location.href = '../admin/dashboard/dash.html';
+                    } else {
+                        alert("Login Fail.!");
+                    }
+                }else {
+                    localStorage.setItem("name",email.split("@")[0])
+                    if (resp.state === true) {
+                        let val = resp.data;
+                        alert(resp.message);
+                        $.cookie('user-id', val.id, {expires: 1, path: '/'});
+                        $.cookie('user-email', val.email, {expires: 1, path: '/'});
+                        location.href = 'dashboard/dashboard.html';
+                    } else {
+                        alert("Login Fail.!");
+                    }
                 }
+
             }
         });
     });
