--- a/src/user/dashboard/signup.html
+++ b/src/user/dashboard/signup.html
@@ -2,205 +2,133 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sigin up</title>
-    <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/css/main.css" rel="stylesheet">
+    <title>Customer Login</title>
+    <link href="../../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        html, body {
+            height: 100%;
+        }
+
+        .global-container {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #f5f5f5;
+        }
+
+        form {
+            padding-top: 10px;
+            font-size: 14px;
+            margin-top: 30px;
+        }
+
+        .card-title {
+            font-weight: 300;
+        }
+
+        .btn {
+            font-size: 14px;
+            margin-top: 20px;
+        }
+
+
+        .login-form {
+            width: 330px;
+            margin: 20px;
+        }
+
+        .sign-up {
+            text-align: center;
+            padding: 20px 0 0;
+        }
+
+        .alert {
+            margin-bottom: -30px;
+            font-size: 13px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="../index.html">Easy Car Rental</a>
-    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-            data-target="#navbarNav" data-toggle="collapse" type="button">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Rent Car</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
-            </li>
-        </ul>
-    </div>
-    <button onclick="location.href='signup.html';" class="btn btn-dark mr-2 my-2 my-sm-0" type="button">Sign Up</button>
-    <button onclick="location.href='login.html';" class="btn btn-light mr-2 my-2 my-sm-0" type="button">Login</button>
-</nav>
-<div class="container">
-    <div class="row" id="signupUser" style="margin: 0; padding-top: 30px; display: block">
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
+<div class="global-container">
+    <div class="card login-form">
+        <div class="card-body">
+            <h3 class="card-title text-center">Sign Up to Easy Car Rental</h3>
+            <div class="card-text">
+                <!--
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">Incorrect username or password.</div> -->
+                <form>
+                    <!-- to error: add class "has-danger" -->
                     <div class="form-group">
-                        <label for="userNic">NIC</label>
-                        <input class="form-control" id="userNic"
-                               name="userNic" placeholder="NIC" type="text">
+                        <label for="nic">Email</label>
+                        <input aria-describedby="emailHelp" class="form-control" id="email" type="email">
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
                     <div class="form-group">
-                        <label for="userName">Name</label>
-                        <input class="form-control" id="userName" name="userName"
-                               placeholder="Full Name" type="text">
+                        <label for="password">Password</label>
+                        <input class="form-control" id="password" type="password">
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
                     <div class="form-group">
-                        <label for="userAddress">Address</label>
-                        <input class="form-control" id="userAddress" name="userAddress"
-                               placeholder="Address" type="text">
+                        <label for="nic">NIC</label>
+                        <input aria-describedby="emailHelp" class="form-control" id="nic" type="email">
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
                     <div class="form-group">
-                        <label for="userContact">Contact</label>
-                        <input class="form-control" id="userContact" name="userContact"
-                               placeholder="Contact No" type="text">
+                        <label for="name">Name</label>
+                        <input aria-describedby="emailHelp" class="form-control" id="name" type="email">
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
                     <div class="form-group">
-                        <label for="userLicenceNo">Driving Licence No</label>
-                        <input class="form-control" id="userLicenceNo" name="userLicenceNo"
-                               placeholder="Driving Licence No" type="text">
+                        <label for="address">Address</label>
+                        <input aria-describedby="emailHelp" class="form-control" id="address" type="email">
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
                     <div class="form-group">
-                        <button class="btn btn-primary" onclick="saveCustomer()" type="button">Next
-                        </button>
+                        <label for="contact">Contact</label>
+                        <input aria-describedby="emailHelp" class="form-control" id="contact" type="email">
                     </div>
-                </div>
+                    <div class="form-group">
+                        <label for="licenceNo">Driving Licence No</label>
+                        <input aria-describedby="emailHelp" class="form-control" id="licenceNo" type="email">
+                    </div>
+                    <button class="btn btn-primary" id="btnSignUp" type="button">Sign Up</button>
+                </form>
             </div>
         </div>
     </div>
-    <div class="row" id="signupDetails" style="margin: 0; padding-top: 30px; display: none">
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
-                    <div class="form-group">
-                        <label for="userEmail">Email</label>
-                        <input class="form-control" id="userEmail"
-                               name="userEmail" placeholder="Email" type="email">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
-                    <div class="form-group">
-                        <label for="userPass">Password</label>
-                        <input class="form-control" id="userPass" name="userPass"
-                               placeholder="Password" type="password">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="row" style="margin: 0">
-                <div class="col-12 col-sm-6 col-md-4">
-                    <div class="form-group">
-                        <button class="btn btn-primary" onclick="registerUser()" type="button">Register</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row" id="fileUpload" style="margin: 0; padding-top: 50px; display: none">
-        <h1>Hang on, It is Final Part..!</h1>
-        <h6>Here you have to upload soft copy of your NIC and Driving License.</h6>
-        <form action="" enctype="multipart/form-data" method="post">
-            <div class="col-12">
-                <div class="row" style="margin: 0">
-                    <div class="col-12 col-sm-6 col-md-4 box-border">
-                        <div class="form-group">
-                            <label for="fileNicF">NIC Front Side</label>
-                            <input class="form-control-file" id="fileNicF" name="file[]"
-                                   placeholder="Driving Licence No"
-                                   type="file">
-                        </div>
-                        <div class="form-group">
-                            <label for="fileNicB">NIC Back Side</label>
-                            <input class="form-control-file" id="fileNicB" name="file[]"
-                                   placeholder="Driving Licence No"
-                                   type="file">
-                        </div>
-                    </div>
-                </div>
-                <div class="row" style="margin: 0">
-                    <div class="col-12 col-sm-6 col-md-4 box-border">
-                        <div class="form-group">
-                            <label for="fileNicF">Driving License Front Side</label>
-                            <input class="form-control-file" id="fileLicF" name="file[]"
-                                   placeholder="Driving Licence No"
-                                   type="file">
-                        </div>
-                        <div class="form-group">
-                            <label for="fileNicB">Driving License Back Side</label>
-                            <input class="form-control-file" id="fileLicB" name="file[]"
-                                   placeholder="Driving Licence No"
-                                   type="file">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="row" style="margin: 0">
-                    <div class="col-12 col-sm-6 col-md-4">
-                        <div class="form-group">
-                            <button class="btn btn-primary" id="but_upload" type="button">Upload & Finish</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    <div class="row" id="signupMessage" style="margin: 0; padding-top: 50px; display: none">
-        <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">Hello There,</h4>
-            <p>Aww yeah, you successfully registered to <strong>Easy Car Rental System.</strong></p>
-            <hr>
-            <p class="mb-0">Thank you for joining us.</p><br>
-            <button class="btn btn-primary my-2 my-sm-0" onclick="location.href='login.html';" type="button">Login
-            </button>
-        </div>
-    </div>
-
 </div>
-<img alt="" class="loginBanner" src="../assets/img/2853456.svg">
+<script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="../../assets/js/jquery-3.5.1.min.js"></script>
+<script src="../../assets/js/jquery.cookie.js"></script>
+<script src="../../assets/js/main.js"></script>
+<script>
+    $('#btnSignUp').click(function () {
+        let userRegObj = {
+            email: $('#email').val(),
+            password: $('#password').val(),
+            role: "Customer",
+            CustomerDTO:{
+                nic: $('#nic').val(),
+                name:$('#name').val(),
+                address:$('#address').val(),
+                contact:$('#contact').val(),
+                drivingLicNo:$('#licenceNo').val(),
+            }
+        };
 
-<script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="../assets/js/jquery-3.5.1.min.js"></script>
-<script src="../assets/js/jquery.cookie.js"></script>
-<script src="../assets/js/main.js"></script>
+        $.ajax({
+            url: "https://carsys.azurewebsites.net/api/v1/user",
+            type: "POST",
+            contentType: "application/json",
+            data: JSON.stringify(userRegObj),
+            success: function (resp) {
+                if (resp.state === true) {
+                    alert(resp.message);
+                    localStorage.setItem("name",$('#name').val())
+                    location.href = '../dashboard/dashboard.html';
+                } else {
+                    alert(resp.message);
+                }
+            }
+        });
+    });
+</script>
 </body>
 </html>
