--- a/src/admin/dashboard/dash.html
+++ b/src/admin/dashboard/dash.html
@@ -20,7 +20,7 @@
 <div class="container py-5">
     <div class="row">
         <div class="col-lg-12 p-5">
-            <h1 id="main-title"><i aria-hidden="true" class="fa fa-tachometer-alt"></i> Hi, Easy Car Rental System</h1>
+            <h1 id="main-title"><i aria-hidden="true" class="fa fa-tachometer-alt"></i> Hi, UnCommon Car-Rents</h1>
             <hr/>
         </div>
     </div>
