--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Easy Car Rental</title>
+    <title>UnCommon Car-Rents</title>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .row {
@@ -351,18 +351,18 @@
         <div class="col-lg-12">
 
             <div class="benz col-md-5" style="position: relative; left: 520px; top: 50px">
-                <img src="../src/assets/pictures/Benz mayback croped.jpg" style="width: 890px; height: 320px">
+                <img src="assets/pictures/Benz mayback croped.jpg" style="width: 890px; height: 320px">
             </div>
 
             <div class="row" style="position:relative; top: 30px;">
                 <div class="header">
                     <p>Uncommon Car-Rents</p>
                     <div class="vl"></div>
-                    <img src="assessts/pictures/star%20green.png"
+                    <img src="assets/pictures/star%20green.png"
                          style="width: 15px; height: 15px; position: relative; bottom: 169px; left: 365px">
-                    <img src="assessts/pictures/star%20green.png"
+                    <img src="assets/pictures/star%20green.png"
                          style="width: 15px; height: 15px; position: relative; bottom: 169px; left: 360px">
-                    <img src="assessts/pictures/star%20green.png"
+                    <img src="assets/pictures/star%20green.png"
                          style="width: 15px; height: 15px; position: relative; bottom: 169px; left: 355px">
 
                     <div class="header-welcome">
@@ -374,7 +374,7 @@
                     </div>
 
                     <div class="carInfo row">
-                        <img class="carDash" src="../src/assets/pictures/Car dashboard post.jpg"
+                        <img class="carDash" src="assets/pictures/Car dashboard post.jpg"
                              style="height: 330px; width: 850px; position:relative; right: 0px;">
                         <p style=" font-family: 'Fira Sans', sans-serif; font-size: 18px; position: relative; left: 120px; top: 110px; color: black;">
                             Join us now. Sign in by hear
@@ -390,7 +390,7 @@
                     <div class="chart row" style="position:relative; top: 50px; left: 40px;">
                         <p style="position:relative; font-family: 'Fira Sans', sans-serif; font-size: 22px; font-weight: bold; color: black; left: 480px;">
                             The most Renting vehicles...</p>
-                        <img src="../src/assets/pictures/bar chart edited.png"
+                        <img src="assets/pictures/bar chart edited.png"
                              style="position:relative; left: 520px; width: 280px; height: 350px; top: 50px">
                         <div class="row col-lg-2" style="position: relative; left: 80px">
                             <div class="row">
@@ -438,7 +438,7 @@
                                 <div class="container">
                                     <div class="row" style="position:relative; left: 60px">
                                         <div class="row col-md-3">
-                                            <img src="../src/assets/pictures/Allion.jpg"
+                                            <img src="assets/pictures/Allion.jpg"
                                                  style="width: 270px; height:150px; position:relative; left: 50px; top: 20px; border-radius: 15px;">
                                             <p style="font-family: 'Fira Sans', sans-serif; font-size: 18px; color: black; font-weight: bold; position:relative; top: 60px; left: 130px">
                                                 Wedding cars</p>
@@ -447,7 +447,7 @@
                                                 wish.</p>
                                         </div>
                                         <div class="row col-md-3">
-                                            <img src="../src/assets/pictures/wagon r.jpg"
+                                            <img src="assets/pictures/wagon r.jpg"
                                                  style="width: 250px; height:150px; border-radius: 15px; position: relative; top: 20px; left: 190px;">
                                             <p style="font-family: 'Fira Sans', sans-serif; font-size: 18px; color: black; font-weight: bold; position:relative; left: 240px; top: 60px;">
                                                 Light purpose cars</p>
@@ -456,7 +456,7 @@
                                                 row budget.</p>
                                         </div>
                                         <div class="row col-md-3">
-                                            <img src="../src/assets/pictures/benz mayback new croped.jpg"
+                                            <img src="assets/pictures/benz mayback new croped.jpg"
                                                  style="width: 270px; height:150px;  position: relative; top: 20px; left: 320px;  border-radius: 15px;">
                                             <p style="font-family: 'Fira Sans', sans-serif; font-size: 18px; color: black; font-weight: bold; position:relative; left: 370px; top: 60px;">
                                                 Luxury purpose cars</p>
@@ -523,7 +523,7 @@
                                 <p style="font-family: 'Cookie', cursive; color: blue; position:relative; left: 550px; font-size: 33px; top: 5px">
                                     Uncommon Car-Rents
                                 </p>
-                                <img src="../src/assets/pictures/car_rent_logo_croped.png"
+                                <img src="assets/pictures/car_rent_logo_croped.png"
                                      style="height: 30px; width: 80px; position: relative; left: 570px">
                             </div>
 
