--- a/src/user/dashboard/signup.html
+++ b/src/user/dashboard/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Customer Login</title>
+    <title>Sign Up</title>
     <link href="../../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style>
         html, body {
