--- a/src/admin/dashboard/dash.html
+++ b/src/admin/dashboard/dash.html
@@ -579,6 +579,7 @@
             success: function (resp) {
                 if (resp.state === true) {
                     $("#mainDashboard").cleanData();
+                    $('#requestAction').modal('hide');
                     alert(resp.message);
                     loadRequestToTable();
                 }
